Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.9.9 (unreleased)

   Bugs fixed

      - Collector #2346: username logging in FCGI crashed the server

      - Collector #2332: SessionDataManger: don't swallow ConflictErrors


  Zope 2.9.8 (2007/07/05)

   Bugs fixed

      - updated to ZODB 3.6.3

      - updated to Zope 3.2.3 codebase

      - Collector #1306: Missing acquisition context on local roles screen.

      - The REQUEST no longer accepts holds after it has been closed.

      - Collector #2153: Supporting unquoted cookies with spaces.

      - Collector #2295: Comments in PythonScripts could lead to syntax
        errors

      - Collector #2307: ObjectCopiedEvent not dispatched to sublocations.

      - Fixed ZClass test breakage due to non-pickleability of
        'zope.interface.Implements' 
        
        N.B.: updated 'zope.interface' package to Zope 3.2 branch;
              should be pinned to a tag or a release before releasing
              2.9.8).

      - Collector #2260: fixed a bug in Examples.zexp

      - Collector #2321: Skip trusted proxies when extracting the client IP
        address from the request.

      - Collector #2318: Allow override of zopectl's control socket in
        zope.conf

      - Collector #2316: correctly unpack DateTimeIndex dates when browsing the
        index.

      - Collector #1866: a 304 HTTP status should not have a content length.
  
      - Collector #2300: delimit *all* HTTP Response headers with CRLF.

  Zope 2.9.7 (2007/03/25)

   Bugs fixed

      - Protected various security mutators with a new postonly decorator.
        The decorator limits method publishing to POST requests only, and
        is a backport from Zope 2.11's requestmethod decorator factory.

      - Collector #2298: webdav.Resource.COPY and webdav.Resource.MOVE did